# translator

./: CMakeLists.txt  README.md  trans.md
include/: Definitions.hpp  Errors.hpp  Interpreter.hpp  Parser.hpp  Scanner.hpp
src/: Errors.cpp  Interpreter.cpp  Parser.cpp  Scanner.cpp  SymbolTable.cpp  main.cpp  tests.cpp
